v0.60 - Configuration & Resource Management